[workspace]
members = ["monoio-http", "monoio-http-client"]
resolver = "2"

[workspace.dependencies]
monoio = "0.2.0"
monoio-compat = "0.2.0"
service-async = "0.2.0"
monoio-rustls = "0.3.0"
monoio-native-tls = "0.3.0"
monoio-codec = "0.3.0"
bytes = "1"
http = "1.0"
local-sync = "0.1"
thiserror = "1"
