[package]
authors = ["ChiHai <ihciah@gmail.com>"]
description = "Low level http implementation for Monoio."
edition = "2021"
keywords = ["monoio", "http", "async"]
license = "MIT/Apache-2.0"
name = "monoio-http"
version = "0.1.0"

[dependencies]
monoio = { version = "0.1.3" }
monoio-codec = { version = "0.0.4" }

bytes = "1"
http = "0.2"
httparse = "1"
thiserror = "1"

tracing = { version = "0.1", optional = true }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = { version = "0.1" }

[features]
default = []
logging = ["tracing"]
