[package]
authors = [
    "ChiHai <ihciah@gmail.com>",
    "Harsha <har23k@gmail.com>",
    "Rain <rain-jiang@outlook.com>",
]
description = "Low level http implementation for Monoio."
edition = "2021"
keywords = ["monoio", "http", "async"]
license = "MIT/Apache-2.0"
name = "monoio-http"
version = "0.2.2"

[dependencies]
monoio = { version = "0.1.5" }
monoio-compat = { version = "0.1.1" }
monoio-codec = { version = "0.1.0" }
service-async = { version = "0.1.3" }

bytes = "1"
http = "0.2"
httparse = "1"
memchr = "2.5"
thiserror = "1"
tracing = { version = "0.1", default-features = false, features = ["std"] }
local-sync = "0.1"

async-stream = "0.3.5"

# H2 crate dependencies
futures-core = { version = "0.3", default-features = false }
fnv = "1.0.5"
slab = "0.4.2"
indexmap = { version = "1.5.2", features = ["std"] }
smallvec = "1"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quickcheck = { version = "1.0.3", default-features = false }
rand = "0.8.4"
env_logger = { version = "0.9", default-features = false }
hex = "0.4.3"

tracing = "0.1"
tracing-subscriber = "0.3"

[features]
default = []
logging = []

# Enables `futures::Stream` implementations for various types.
stream = []

# Enables **unstable** APIs. Any API exposed by this feature has no backwards
# compatibility guarantees. In other words, you should not use this feature for
# anything besides experimentation. Definitely **do not** publish a crate that
# depends on this feature.
unstable = []

[lib]
doctest = false
