[package]
authors = [
    "ChiHai <ihciah@gmail.com>",
    "Harsha <har23k@gmail.com>",
    "Rain <rain-jiang@outlook.com>",
]
description = "Low level http implementation for Monoio."
edition = "2021"
keywords = ["monoio", "http", "async"]
license = "MIT/Apache-2.0"
name = "monoio-http"
version = "0.3.7"

[dependencies]
monoio = { workspace = true }
monoio-compat = { workspace = true }
monoio-rustls = { workspace = true }
monoio-native-tls = { workspace = true, optional = true }
service-async = { workspace = true }
monoio-codec = { workspace = true }
bytes = { workspace = true }
http = { workspace = true }
local-sync = { workspace = true }
thiserror = { workspace = true }

httparse = "1"
memchr = "2.5"
flate2 = "1"
brotli = "3.3"

tracing = { version = "0.1", default-features = false, features = ["std"] }

# H2 crate dependencies
futures-core = { version = "0.3", default-features = false }
fnv = "1.0.5"
slab = "0.4.2"
indexmap = { version = "1.5.2", features = ["std"] }
smallvec = "1"

cookie = { version = "0.18.0", features = ["percent-encode"], optional = true }
serde_urlencoded = { version = "0.7", optional = true }
mime = { version = "0.3", optional = true }
multer = { version = "3.0.0", optional = true }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quickcheck = { version = "1.0.3", default-features = false }
rand = "0.8.4"
env_logger = { version = "0.10", default-features = false }
hex = "0.4.3"

tracing = "0.1"
tracing-subscriber = "0.3"

[features]
default = []
logging = []

# Enables `futures::Stream` implementations for various types.
stream = []

# Enables **unstable** APIs. Any API exposed by this feature has no backwards
# compatibility guarantees. In other words, you should not use this feature for
# anything besides experimentation. Definitely **do not** publish a crate that
# depends on this feature.
unstable = []

parsed = ["dep:cookie", "dep:serde_urlencoded", "dep:mime", "dep:multer"]

[lib]
doctest = false
